--- a/Locadora/app/src/main/res/values/strings.xml
+++ b/Locadora/app/src/main/res/values/strings.xml
@@ -16,10 +16,9 @@
         <item>Escolha a cidade</item>
         <item>São Paulo</item>
         <item>Rio de janeiro</item>
-        <item>Recife</item>
-        <item>Salvador</item>
-        <item>Belo Horizonte</item>
-        <item>Porto Alegre</item>
+        <item>Brasilia</item>
+        <item>Fortaleza</item>
+        <item>Curitiba</item>
     </string-array>
 
 
